--- a/MiRI.config.ini
+++ b/MiRI.config.ini
@@ -54,7 +54,7 @@ alignment_software = minimap2
 evalue = 1e-5
 NGS_single_end = 
 NGS_pair_ends = 
-TGS = MiRI_TestData/Pacbio.CRR302668.partial.fastq
+TGS = MiRI_TestData/Pacbio.CRR302668.1000.fastq
 TGS_type = ont
 filter_reads = Y
 threads = 
