--- a/MiRIV.config.ini
+++ b/MiRIV.config.ini
@@ -6,7 +6,7 @@ project_id = VV
 
 [mainconfiguration]
 ;; Parameters for mapping genome mainconfiguration.
-auto_map = N
+auto_map = Y
 inputfile = MiRIV_TestData/paired_repeats_for_mapping_virtual.tsv
 genome_length = 605764
 genome_type = C
@@ -18,7 +18,7 @@ genome_type = C
 
 [IR_mediated_reverse_recomb]
 ;; Parameters for drawing maps of Inverted Repeat (IR) mediated genome recombination.
-auto_map = N 
+auto_map = Y 
 inputfile = MiRIV_TestData/paired_repeats_for_mapping_virtual.tsv
 inputfasta = MiRIV_TestData/OR333986_Trachelospermum_jasminoides.fasta
 genome_type = C 
@@ -30,7 +30,7 @@ genome_type = C
 
 [DR_mediated_recomb_1to2]
 ;; Parameters for drawing maps of organelle genome recombination mediated by direct repeat sequence (DR) from one chromosome to two chromosomes (1to2).
-auto_map = N 
+auto_map = y 
 inputfile = MiRIV_TestData/paired_repeats_for_mapping_virtual.tsv
 inputfasta = MiRIV_TestData/OR333986_Trachelospermum_jasminoides.fasta
 genome_type = C 
@@ -42,7 +42,7 @@ genome_type = C
 
 [DR_mediated_recomb_2to1]
 ;; Parameters for drawing maps of organelle genome recombination mediated by direct repeat sequence (DR) from two chromosomes to one chromosome (2to1).
-auto_map = N
+auto_map = y
 complementary_chain = Y
 chrom1_file = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2_map.tsv
 chrom1_fasta = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2.fasta 
@@ -60,7 +60,7 @@ chrom2_type = C
 
 [DR_mediated_recomb_2to2]
 ;; Parameters for drawing maps of organelle genome recombination mediated by direct repeat sequence (DR) between two linear chromosomes (2to2).
-auto_map = N 
+auto_map = Y 
 complementary_chain = Y
 chrom1_file = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2_map.tsv
 chrom1_fasta = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2.fasta 
