--- a/MiRI.config.ini
+++ b/MiRI.config.ini
@@ -3,14 +3,14 @@
 project_id = AR
 mode = A
 inputfasta = MiRI_TestData/mitogenome_plastome.fasta
-genome_type = C
+genome_type = 
 complementary_chain = Yes
 redundant_intermediate_results = D 
 
 ; project_id: **Required**. Consists of letters, numbers and/or underscores (Case sensitive).
 ; mode: The values are *N/A/R/C* (Case insensitive). *N*: doesn't run the pipline; *A*: automatically run all scripts; *R*: run ROUSFinder for finding repeats only; *C*: check repeat-spanning reads from manually calibrated ROUSFinder results. The "calibrated_repeat_file" must be set in the [calibrate_ROUSFinder_results] below. **default=A**.
 ; inputfasta: **Required**. Path to the genome FASTA file. Multiple chromosomes can be stored and must be in Fasta format.
-; genome_type: The values are *C/L* (Case insensitive). *C* indicate the inputed genome is circlar structure. *L* indicate the inputed genome is linear structure. **Default=C**.
+; genome_type: The values are *C/L* (Case insensitive). *C* indicate the inputed genome is circlar structure. *L* indicate the inputed genome is linear structure. When two or more chromosomes are present, this parameter is disabled and does not need to be set.
 ; complementary_chain: The values are *Yes/Y/No/N* (Case insensitive). *Yes/Y*, consider the complementary_chain for searching spanning reads. *No/N*, don't consider the complementary_chain for searching spanning reads. **default=Yes**.
 ; redundant_intermediate_results: The values are *D/K* (Case insensitive). *D*, delete the trimmed references when no READs span the repeat.; *K*, keep all the mapping results of trimmed references with a repeat unit. **default=D**. 
 
