--- a/MiRI.config.ini
+++ b/MiRI.config.ini
@@ -55,7 +55,7 @@ evalue = 1e-5
 NGS_single_end = 
 NGS_pair_ends = 
 TGS = MiRI_TestData/Pacbio.CRR302668.1000.fastq
-TGS_type = ont
+TGS_type = pacbio
 filter_reads = Y
 threads = 
 
