--- a/MiRIV.config.ini
+++ b/MiRIV.config.ini
@@ -4,6 +4,7 @@ project_id = VV
 
 ; project id = Project number. Consist of letters, numbers and underscores. **Required**. 
 
+
 [mainconfiguration]
 ;; Parameters for mapping genome mainconfiguration.
 auto_map = Y
@@ -15,6 +16,7 @@ genome_type = C
 ; inputfile = Path to 8 column table (8CT), describing the paired repeat info. **Required when "auto_map = Y"**.
 ; genome_length = **Required**. The length of the input genome.
 ; genome_type: The values are *C/L*  (Case insensitive). *C* indicate the inputed genome is circlar. *L* indicate the inputed genome is linear. **Required when "auto_map = Y"**. **Default=C**.
+
 
 [IR_mediated_reverse_recomb]
 ;; Parameters for drawing maps of Inverted Repeat (IR) mediated genome recombination.
@@ -28,6 +30,7 @@ genome_type = C
 ; inputfasta = Path to genome sequence file (fasta format). **Required when "auto_map = Y/M"**.
 ; genome_type: The value is *C/L* (Case insensitive). *C* indicate the inputed genome is circlar. *L* indicate the inputed genome is linear. **Required when "auto_map = Y/M"**. **Default=C**.
 
+
 [DR_mediated_recomb_1to2]
 ;; Parameters for drawing maps of organelle genome recombination mediated by direct repeat sequence (DR) from one chromosome to two chromosomes (1to2).
 auto_map = y 
@@ -40,38 +43,41 @@ genome_type = C
 ; inputfasta: Path to genome sequence file (fasta format). **Required when "auto_map = Y/M"**.
 ; genome_type: The value is *C/L* (Case insensitive). *C* indicate the inputed genome is circlar structure. *L* indicate the inputed genome is linear structure.  **Required when "auto_map = Y/M"**. **Default=C**.
 
+
 [DR_mediated_recomb_2to1]
 ;; Parameters for drawing maps of organelle genome recombination mediated by direct repeat sequence (DR) from two chromosomes to one chromosome (2to1).
 auto_map = y
 complementary_chain = Y
-chrom1_file = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2_map.tsv
-chrom1_fasta = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2.fasta 
-chrom1_type = C
-chrom2_file = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr2_1to2_map.tsv
-chrom2_fasta = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr2_1to2.fasta
-chrom2_type = C
+chr1_file = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2_map.tsv
+chr1_fasta = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2.fasta 
+chr1_type = C
+chr2_file = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr2_1to2_map.tsv
+chr2_fasta = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr2_1to2.fasta
+chr2_type = C
 
 ; auto_map: The values are *Yes/Y/No/N/M* (Case insensitive). *Yes/Y*: Draw the map of DR-mediated organelle genome recombination (2to1). *M*: Manually select DRs to draw the map of organelle genome recombination. *No/N*: Don't draw the map. **Default=Y**. 
 ; complementary_chain:  The values are *Yes/Y/No/N* (Case insensitive). *Yes/Y*: Considering the repeats in the two chains. *No/N*: Only considering the plus chain. **Default=N**.
-; chrom1_type: The value is *C/L* (Case insensitive). *C* indicate the inputed genome is circlar structure. *L* indicate the inputed genome is linear structure. **Default=C**.
-; chrom2_type: Its unique value is *C* (Case insensitive), indicating the inputed genome is circlar structure. **Default=C**.
+; chr1_type: The value is *C/L* (Case insensitive). *C* indicate the inputed genome is circlar structure. *L* indicate the inputed genome is linear structure. **Default=C**.
+; chr2_type: Its unique value is *C* (Case insensitive), indicating the inputed genome is circlar structure. **Default=C**.
 ; chrom_file: **Required when 'auto_map'=yes/m** (Case insensitive). Path to 8 column table (8CT tsv file), describing the paired repeat info.
 ; chrom_fasta: The chromosome sequence in fasta format. **Required when 'auto_map'=yes/m** (Case insensitive).
+
 
 [DR_mediated_recomb_2to2]
 ;; Parameters for drawing maps of organelle genome recombination mediated by direct repeat sequence (DR) between two linear chromosomes (2to2).
 auto_map = Y 
 complementary_chain = Y
-chrom1_file = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2_map.tsv
-chrom1_fasta = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2.fasta 
-chrom2_file = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr2_1to2_map.tsv
-chrom2_fasta = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr2_1to2.fasta
+chr1_file = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2_map.tsv
+chr1_fasta = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2.fasta 
+chr2_file = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr2_1to2_map.tsv
+chr2_fasta = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr2_1to2.fasta
 
 ; auto_map: The values are *Yes/Y/No/N/M* (Case insensitive). *Yes/Y*: Draw the map of DR-mediated linear organelle genome recombination (2to2). *M*: Manually select DRs to draw the map of organelle genome recombination. *No/N*: Don't draw the map. **Default=Y**. 
 ; complementary_chain:  The values are *Yes/Y/No/N* (Case insensitive). *Yes/Y*: Considering the repeats in the two chains. *No/N*: Only considering the plus chain. **Default=N**.
 ; chrom_file: **Required when 'auto_map'=yes/m**. Path to 8 column table (8CT tsv file), describing the paired repeat info.
 ; chrom_fasta: The chromosome sequence in fasta format. **Required when 'auto_map'=yes/m**.
 ; NOTE: The type of the two chromosomes must be linear.
+
 
 [mapper_config]
 ;; Parameters for the properties of various elements in the genome map.
@@ -93,42 +99,44 @@ tag_line_width = 1
 ; tag_height: Height of tag(an annular sector). **Default=20**. 
 ; tag_line_width: Tag(an annular sector) outline thickness. **Default=1**. 
 
+
 [color_library]
 ;; Colouring scheme for different repeats.
-RP1 = 0.0.0 
-RP2 = 255.0.0 
-RP3 = 0.255.0
-RP4 = #0000FF 
-RP5 = yellow
-RP6 = pink
-RP7 = blue_purple
-RP8 = brown
-RP9 = lemon_yellow
-RP10 = rust
-RP11 = beige
-RP12 = olive
-RP13 = peach
-RP14 = lavender
-RP15 = dark_red
-RP16 = cyan
-RP17 = gray
-RP18 = #800080 
-RP19 = gold
-RP20 = teal
-RP21 = silver
-RP22 = mint
-RP23 = copper
-RP24 = turquoise
-RP25 = orange
-RP26 = platinum
-RP27 = #c1282d
-RP28 = light_purple
-RP29 = indigo
-RP30 = tangerine 
+RP1 = black
+RP2 = red
+RP3 = orange
+RP4 = yellow
+RP5 = green
+RP6 = cyan
+RP7 = blue
+RP8 = purple
+RP9 = brown
+RP10 = slategray
+RP11 = forestgreen
+RP12 = gold
+RP13 = indigo
+RP14 = darkgreen
+RP15 = darkred
+RP16 = firebrick
+RP17 = crimson
+RP18 = chocolate
+RP19 = olive
+RP20 = yellowgreen
+RP21 = orangered
+RP22 = limegreen
+RP23 = greenyellow
+RP24 = darkslategray
+RP25 = aqua
+RP26 = navy
+RP27 = plum
+RP28 = skyblue
+RP29 = coral
+RP30 = gray
 
 ; *NOTE*:The color set for each repeat above is default (Case insensitive).
-; *NOTE*: MiRIV has 82 built-in colours described in English words, if you want to use more colours, please set in RGB/hexadecimal data.
-; *NOTE*: Built-in 82 colours described in English words are: black, red, brown, orange, blue, yellow, green, pink, cyan, gray, purple, gold, teal, silver, mint, copper, turquoise, rust, platinum, pomegranate, indigo, tangerine, navy, beige, olive, peach, lavender, light_blue, salmon, dark_green, raspberry, light_coral, white, dark_purple, dark_red, light_green, dark_brown, light_purple, deep_orange, coral_orange, lime_green, light_pink, steel_gray, bright_green, olive_green, fiery_red, deep_emerald, sapphire_blue, coral_pink, deep_jade, slate_blue, mint_green, blue_purple, coral_orange, grass_green, deep_crimson, pine_green, bright_pink, vivid_blue, indigo_blue, deep_teal, deep_sienna, pearl_white, steel_blue, deep_amber, cobalt_blue, apple_green, moonlight_silver, cinnabar_red, rose_pink, iron_gray, lemon_yellow, cherry_blossom, dark_olive, deep_blue, royal_blue, deep_eggplant, pearlescent_pink, emerald_green, lilac_gray, honey_yellow, strawberry_red, deep_jewel.
+; *NOTE*: MiRIV has 60 built-in colours described in English words, which are black, red, orange, yellow, green, cyan, blue, purple, brown, gray, darkslategray, dimgray, navy, indigo, darkgreen, darkred, firebrick, crimson, chocolate, olive, yellowgreen, lawngreen, limegreen, greenyellow, lightseagreen, seagreen, darkseagreen, lightgreen, forestgreen, darkcyan, mediumturquoise, turquoise, aquamarine, mediumaquamarine, aqua, deepskyblue, skyblue, steelblue, cadetblue, royalblue, mediumblue, darkviolet, plum, deeppink, hotpink, pink, palevioletred, mediumvioletred, coral, orangered, darkorange, goldenrod, gold, khaki, darkkhaki, wheat, lightgrey, lightslategray, slategray, darkgray.
+; *NOTE*: If you want to use more colours, please set in RGB/hexadecimal color data.
+
 
 [Arrange_map]
 ;; Arrange images into a grid of nine squares.
@@ -164,5 +172,6 @@ bottom_right_path = MiRIV_TestData/MiRIV_IR_RP4a_RP4b_map.svg
 bottom_middle_path = MiRIV_TestData/MiRIV_DR_RP3a_RP3d_Chr1_1to2_map.svg
 bottom_left_path = MiRIV_TestData/MiRIV_IR_RP1a_RP1b_map.svg 
 ; *NOTE*: Only accept images in svg format. Set the path as desired, or leave it blank.
+
 
 
