--- a/MiRI.config.ini
+++ b/MiRI.config.ini
@@ -9,7 +9,7 @@ redundant_intermediate_results = D
 
 ; project_id: **Required**. Consists of letters, numbers and/or underscores (Case sensitive).
 ; mode: The values are *N/A/R/C* (Case insensitive). *N*: doesn't run the pipline; *A*: automatically run all scripts; *R*: run ROUSFinder for finding repeats only; *C*: check repeat-spanning reads from manually calibrated ROUSFinder results. The "calibrated_repeat_file" must be set in the [calibrate_ROUSFinder_results] below. **default=A**.
-; inputfasta: **Required**. Path to the genome FASTA file. Multiple chromosomes can be stored and must be in Fasta format.
+; inputfasta: **Required**. Path to the genome FASTA file. Multiple chromosomes can be stored and must be in FASTA format.
 ; genome_type: The values are *C/L/N* (Case insensitive). *C* indicate the inputed genome is circlar structure. *L* indicate the inputed genome is linear structure. When two or more chromosomes are present, this parameter is disabled and does not need to be set.
 ; complementary_chain: The values are *Yes/Y/No/N* (Case insensitive). *Yes/Y*, consider the complementary_chain for searching spanning reads. *No/N*, don't consider the complementary_chain for searching spanning reads. **default=Yes**.
 ; redundant_intermediate_results: The values are *D/K* (Case insensitive). *D*, delete trimmed reference with a repeat when no enough READs span its repeat; *K*, keep all the mapping results of trimmed references. **default=D**. 
@@ -89,7 +89,7 @@ redundant_intermediate_results = D
 
 ; refilter_mode: The values are *yes/y/no/n* (Case insensitive). *yes/y*: aggregrate the final results again; *no/n*: don't aggregrate the final results, especially before the first process. **default=no/n**.
 ; refilter_id: **Required** when 'filter_mode' = yes. The id used to filter previously obtained results again. 
-; spanning_read_flanking_repeat_length: The value is Integer >=1. Length of reads that span a repeat, **default= 5bp**. It should be <= 'flanked_sequence_length'.
+; spanning_read_flanking_repeat_length: The value is Integer >=1. Length of reads that span a repeat, **default= 5 bp**. It should be <= 'flanked_sequence_length'.
 ; spanning_read_number: The value is Integer >=1. Number of reads spanning a repeat. Used to filter recombination-supporting paired repeats again. **Default=5**. 
 ; redundant_intermediate_results: The values are *D/K* (Case insensitive). *D/K*: delete or keep redundant intermediate results in the re-filtering process in the re-filtering process. **default=D**. 
 ; *NOTE*:When 'redundant_intermediate_results = D' in [general] section, values of 'repeat_length' and 'spanning_read_flanking_repeat_length' in this section should be more than thoes in previous [check_spanning_reads] section. When 'redundant_intermediate_results = K' in [general] section, thoes values should be >= 1. The re-filtering process should be in the same directory as the one where MiRI was initially run. Please don't modify the preliminary parameters and results of MiRI in refiltering process.
