--- a/MiRIV.config.ini
+++ b/MiRIV.config.ini
@@ -47,7 +47,7 @@ genome_type = C
 [DR_mediated_recomb_2to1]
 ;; Parameters for drawing maps of organelle genome recombination mediated by direct repeat sequence (DR) from two chromosomes to one chromosome (2to1).
 auto_map = y
-complementary_chain = Y
+flip_chain = Y
 chr1_file = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2_map.tsv
 chr1_fasta = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2.fasta 
 chr1_type = C
@@ -56,7 +56,7 @@ chr2_fasta = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr2_1to2.fasta
 chr2_type = C
 
 ; auto_map: The values are *Yes/Y/No/N/M* (Case insensitive). *Yes/Y*: Draw the map of DR-mediated organelle genome recombination (2to1). *M*: Manually select DRs to draw the map of organelle genome recombination. *No/N*: Don't draw the map. **Default=Y**. 
-; complementary_chain:  The values are *Yes/Y/No/N* (Case insensitive). *Yes/Y*: Considering the repeats in the two chains. *No/N*: Only considering the plus chain. **Default=N**.
+; flip_chain: The values are *Yes/Y/No/N* (Case insensitive). *Yes/Y*: Allow a DNA strand to be flipped so that inverted repeats become direct repeats. *No/N*: Not allow the flipping of a DNA. **Default=Y**.
 ; chr1_type: The value is *C/L* (Case insensitive). *C* indicate the inputed genome is circlar structure. *L* indicate the inputed genome is linear structure. **Default=C**.
 ; chr2_type: Its unique value is *C* (Case insensitive), indicating the inputed genome is circlar structure. **Default=C**.
 ; chrom_file: **Required when 'auto_map'=yes/m** (Case insensitive). Path to 8 column table (8CT tsv file), describing the paired repeat info.
@@ -66,14 +66,14 @@ chr2_type = C
 [DR_mediated_recomb_2to2]
 ;; Parameters for drawing maps of organelle genome recombination mediated by direct repeat sequence (DR) between two linear chromosomes (2to2).
 auto_map = Y 
-complementary_chain = Y
+flip_chain = Y
 chr1_file = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2_map.tsv
 chr1_fasta = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr1_1to2.fasta 
 chr2_file = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr2_1to2_map.tsv
 chr2_fasta = MiRIV_TestData/MiRIV_DR_RP5a_RP5b_Chr2_1to2.fasta
 
 ; auto_map: The values are *Yes/Y/No/N/M* (Case insensitive). *Yes/Y*: Draw the map of DR-mediated linear organelle genome recombination (2to2). *M*: Manually select DRs to draw the map of organelle genome recombination. *No/N*: Don't draw the map. **Default=Y**. 
-; complementary_chain:  The values are *Yes/Y/No/N* (Case insensitive). *Yes/Y*: Considering the repeats in the two chains. *No/N*: Only considering the plus chain. **Default=N**.
+; flip_chain: The values are *Yes/Y/No/N* (Case insensitive). *Yes/Y*: Allow a DNA strand to be flipped so that inverted repeats become direct repeats. *No/N*: Not allow the flipping of a DNA. **Default=Y**.
 ; chrom_file: **Required when 'auto_map'=yes/m**. Path to 8 column table (8CT tsv file), describing the paired repeat info.
 ; chrom_fasta: The chromosome sequence in fasta format. **Required when 'auto_map'=yes/m**.
 ; NOTE: The type of the two chromosomes must be linear.
@@ -122,7 +122,7 @@ RP17 = limegreen
 RP18 = chocolate
 RP19 = olive
 RP20 = yellowgreen
-RP21 = orangered
+RP21 = turquoise
 RP22 = plum
 RP23 = greenyellow
 RP24 = darkslategray
