--- a/MiRIV.config.ini
+++ b/MiRIV.config.ini
@@ -2,7 +2,7 @@
 ;; Parameters for general set.
 project_id = VV 
 
-; project id = Project number. Consist of letters, numbers and underscores. **Required**. 
+; project_id: Project number. Consist of letters, numbers and underscores. **Required**. 
 
 
 [mainconfiguration]
@@ -13,7 +13,7 @@ genome_length = 605764
 genome_type = C
 
 ; auto_map: The values are *Yes/Y/No/N (Case insensitive). *Yes/Y*: Automatically map genome mainconfiguration. *No/N*: Don't draw the map. **Default=Y**.
-; inputfile = Path to 8 column table (8CT), describing the paired repeat info. **Required when "auto_map = Y"**.
+; inputfile: Path to 8 column table (8CT), describing the paired repeat info. **Required when "auto_map = Y"**.
 ; genome_length = **Required**. The length of the input genome.
 ; genome_type: The values are *C/L*  (Case insensitive). *C* indicate the inputed genome is circlar. *L* indicate the inputed genome is linear. **Required when "auto_map = Y"**. **Default=C**.
 
@@ -26,8 +26,8 @@ inputfasta = MiRIV_TestData/OR333986_Trachelospermum_jasminoides.fasta
 genome_type = C 
 
 ; auto_map: The values are *Yes/Y/No/N/M* (Case insensitive). *Yes/Y*: Automatically draw the map of IR-mediated organelle genome recombination. *M*: Manually select IRs to draw the map of organelle genome recombination. *No/N*: Don't draw the map. **Default=Y**.
-; inputfile = Path to 8 column table (8CT), describing the paired repeat info. **Required when "auto_map = Y/M"**.
-; inputfasta = Path to genome sequence file (fasta format). **Required when "auto_map = Y/M"**.
+; inputfile: Path to 8 column table (8CT), describing the paired repeat info. **Required when "auto_map = Y/M"**.
+; inputfasta: Path to genome sequence file (fasta format). **Required when "auto_map = Y/M"**.
 ; genome_type: The value is *C/L* (Case insensitive). *C* indicate the inputed genome is circlar. *L* indicate the inputed genome is linear. **Required when "auto_map = Y/M"**. **Default=C**.
 
 
