--- a/ReHRI_ReHRV_1.0.yml
+++ b/ReHRI_ReHRV_1.0.yml
@@ -228,4 +228,5 @@ dependencies:
       - urllib3==2.2.1
       - webencodings==0.5.1
       - yagmail==0.15.293
+      - chardet==5.2.0 
 prefix: /home/lqwang/miniconda3/envs/ReHRI_ReHRV_1.0
