--- a/ReHRI.config.ini
+++ b/ReHRI.config.ini
@@ -31,7 +31,7 @@ penalty = 20
 calibrated_repeat_file = ReHRI_TestData/Two_manual_rep.txt
 
 ; calibrated_repeat_file: User-provided repeat information, obtained and calibrated by users. Required when 'pipeline = C' in the [general] section.
-; note: The repeat information here should be consistent with the genome sequence submitted earlier in the [general] section.
+; *NOTE*: The repeat information here should be consistent with the genome sequence submitted earlier in the [general] section.
 
 
 [mainconfiguration] 
@@ -67,7 +67,7 @@ threads =
 ; TGS_type: Types of third-generation sequencing data, which is used when third generation data is provided. *ont*, Sequencing data from Oxford Nanopore Technologies (ONT). *pacbio*, Sequencing data of Pacific Biosciences (PacBio) (Case insensitive). 
 ; threads: Number of threads of mapping softwares, >=1. **default=95%** of maximum threads of your machine.
 ; filter_reads: Filter the reads according to the input genome.  The values are *Yes/Y/No/N* (Case insensitive). *Yes/Y*, filter the reads. *No/N*, don't filter the reads. **default=Yes**.
-; NOTE: **Only one** of the above three types of data must be provided at a time. The read data format should be FASTQ/FASTA. 
+; *NOTE*: **Only one** of the above three types of data must be provided at a time. The read data format should be FASTQ/FASTA. 
 
 
 [check_spanning_reads]
