--- a/ReHRV_1.0.config.ini
+++ b/ReHRV_1.0.config.ini
@@ -48,11 +48,11 @@ genome_type = C
 ;; Parameters for drawing maps of organelle genome recombination mediated by direct repeat sequence (DR) from two chromosomes to one chromosome (2to1).
 auto_map = y
 flip_chain = Y
-chr1_file = ReHRV_TestData/ReHRV_DR_RP5a_RP5b_Chr1_1to2_map.tsv
-chr1_fasta = ReHRV_TestData/ReHRV_DR_RP5a_RP5b_Chr1_1to2.fasta 
+chr1_file = ReHRV_TestData/ReHRV_DR_RU5a_RU5b_chr1_1to2_map.tsv
+chr1_fasta = ReHRV_TestData/ReHRV_DR_RU5a_RU5b_chr1_1to2.fasta 
 chr1_type = C
-chr2_file = ReHRV_TestData/ReHRV_DR_RP5a_RP5b_Chr2_1to2_map.tsv
-chr2_fasta = ReHRV_TestData/ReHRV_DR_RP5a_RP5b_Chr2_1to2.fasta
+chr2_file = ReHRV_TestData/ReHRV_DR_RU5a_RU5b_chr2_1to2_map.tsv
+chr2_fasta = ReHRV_TestData/ReHRV_DR_RU5a_RU5b_chr2_1to2.fasta
 chr2_type = C
 
 ; auto_map: The values are *Yes/Y/No/N/M* (Case insensitive). *Yes/Y*: Draw the map of DR-mediated organelle genome recombination (2to1). *M*: Manually select DRs to draw the map of organelle genome recombination. *No/N*: Don't draw the map. **Default=Y**. 
@@ -67,10 +67,10 @@ chr2_type = C
 ;; Parameters for drawing maps of organelle genome recombination mediated by direct repeat sequence (DR) between two linear chromosomes (2to2).
 auto_map = Y 
 flip_chain = Y
-chr1_file = ReHRV_TestData/ReHRV_DR_RP5a_RP5b_Chr1_1to2_map.tsv
-chr1_fasta = ReHRV_TestData/ReHRV_DR_RP5a_RP5b_Chr1_1to2.fasta 
-chr2_file = ReHRV_TestData/ReHRV_DR_RP5a_RP5b_Chr2_1to2_map.tsv
-chr2_fasta = ReHRV_TestData/ReHRV_DR_RP5a_RP5b_Chr2_1to2.fasta
+chr1_file = ReHRV_TestData/ReHRV_DR_RU5a_RU5b_chr1_1to2_map.tsv
+chr1_fasta = ReHRV_TestData/ReHRV_DR_RU5a_RU5b_chr1_1to2.fasta 
+chr2_file = ReHRV_TestData/ReHRV_DR_RU5a_RU5b_chr2_1to2_map.tsv
+chr2_fasta = ReHRV_TestData/ReHRV_DR_RU5a_RU5b_chr2_1to2.fasta
 
 ; auto_map: The values are *Yes/Y/No/N/M* (Case insensitive). *Yes/Y*: Draw the map of DR-mediated linear organelle genome recombination (2to2). *M*: Manually select DRs to draw the map of organelle genome recombination. *No/N*: Don't draw the map. **Default=Y**. 
 ; flip_chain: The values are *Yes/Y/No/N* (Case insensitive). *Yes/Y*: Allow a DNA strand to be flipped so that inverted repeats become direct repeats. *No/N*: Not allow the flipping of a DNA. **Default=Y**.
@@ -102,36 +102,36 @@ tag_line_width = 1
 
 [color_library]
 ;; Colouring scheme for different repeats.
-RP1 = black
-RP2 = red
-RP3 = orange
-RP4 = yellow
-RP5 = green
-RP6 = cyan
-RP7 = blue
-RP8 = purple
-RP9 = gray
-RP10 = slategray
-RP11 = forestgreen
-RP12 = gold
-RP13 = indigo
-RP14 = darkgreen
-RP15 = darkred
-RP16 = firebrick
-RP17 = limegreen
-RP18 = chocolate
-RP19 = olive
-RP20 = yellowgreen
-RP21 = turquoise
-RP22 = plum
-RP23 = greenyellow
-RP24 = darkslategray
-RP25 = aqua
-RP26 = navy
-RP27 = crimson
-RP28 = skyblue
-RP29 = coral
-RP30 = brown
+RU1 = black
+RU2 = red
+RU3 = orange
+RU4 = yellow
+RU5 = green
+RU6 = cyan
+RU7 = blue
+RU8 = purple
+RU9 = gray
+RU10 = slategray
+RU11 = forestgreen
+RU12 = gold
+RU13 = indigo
+RU14 = darkgreen
+RU15 = darkred
+RU16 = firebrick
+RU17 = limegreen
+RU18 = chocolate
+RU19 = olive
+RU20 = yellowgreen
+RU21 = turquoise
+RU22 = plum
+RU23 = greenyellow
+RU24 = darkslategray
+RU25 = aqua
+RU26 = navy
+RU27 = crimson
+RU28 = skyblue
+RU29 = coral
+RU30 = brown
 
 ; *NOTE*:The color set for each repeat above is default (Case insensitive).
 ; *NOTE*: ReHRV has 60 built-in colours described in English words, which are black, red, orange, yellow, green, cyan, blue, purple, brown, gray, darkslategray, dimgray, navy, indigo, darkgreen, darkred, firebrick, crimson, chocolate, olive, yellowgreen, lawngreen, limegreen, greenyellow, lightseagreen, seagreen, darkseagreen, lightgreen, forestgreen, darkcyan, mediumturquoise, turquoise, aquamarine, mediumaquamarine, aqua, deepskyblue, skyblue, steelblue, cadetblue, royalblue, mediumblue, darkviolet, plum, deeppink, hotpink, pink, palevioletred, mediumvioletred, coral, orangered, darkorange, goldenrod, gold, khaki, darkkhaki, wheat, lightgrey, lightslategray, slategray, darkgray.
@@ -151,26 +151,26 @@ image_dpi = 600
 
 ; Remarks info in the circle map.
 center_font = Main
-left_middle_font = RP1
-right_middle_font = RP2
-top_middle_font = RP3
-bottom_middle_font = RP4
-top_left_font = RP5
-top_right_font = RP6
-bottom_left_font = RP7
-bottom_right_font = RP8
+left_middle_font = RU1
+right_middle_font = RU2
+top_middle_font = RU3
+bottom_middle_font = RU4
+top_left_font = RU5
+top_right_font = RU6
+bottom_left_font = RU7
+bottom_right_font = RU8
 ; *NOTE*: Set the text content as desired, the content can be left blank.
 
 ; Path to up to nine maps.
 center_path = ReHRV_TestData/mainconfig_ReHRV_map.svg
-left_middle_path = ReHRV_TestData/ReHRV_DR_RP3a_RP3d_Chr1_1to2_map.svg
-top_left_path  = ReHRV_TestData/ReHRV_DR_RP3a_RP3d_Chr2_1to2_map.svg
-top_middle_path = ReHRV_TestData/ReHRV_DR_RP3a_RP3d_Chr1_1to2_map.svg
-top_right_path = ReHRV_TestData/ReHRV_DR_RP3a_RP3d_Chr2_1to2_map.svg
-right_middle_path = ReHRV_TestData/ReHRV_IR_RP2a_RP2b_map.svg
-bottom_right_path = ReHRV_TestData/ReHRV_IR_RP4a_RP4b_map.svg
-bottom_middle_path = ReHRV_TestData/ReHRV_DR_RP3a_RP3d_Chr1_1to2_map.svg
-bottom_left_path = ReHRV_TestData/ReHRV_IR_RP1a_RP1b_map.svg 
+left_middle_path = ReHRV_TestData/ReHRV_DR_RU3a_RU3d_chr1_1to2_map.svg
+top_left_path  = ReHRV_TestData/ReHRV_DR_RU3a_RU3d_chr2_1to2_map.svg
+top_middle_path = ReHRV_TestData/ReHRV_DR_RU3a_RU3d_chr1_1to2_map.svg
+top_right_path = ReHRV_TestData/ReHRV_DR_RU3a_RU3d_chr2_1to2_map.svg
+right_middle_path = ReHRV_TestData/ReHRV_IR_RU2a_RU2b_map.svg
+bottom_right_path = ReHRV_TestData/ReHRV_IR_RU4a_RU4b_map.svg
+bottom_middle_path = ReHRV_TestData/ReHRV_DR_RU3a_RU3d_chr1_1to2_map.svg
+bottom_left_path = ReHRV_TestData/ReHRV_IR_RU1a_RU1b_map.svg 
 ; *NOTE*: Only accept images in svg format. Set the path as desired, or leave it blank.
 
 
