--- a/ReHRI.config.ini
+++ b/ReHRI.config.ini
@@ -1,6 +1,6 @@
 [general]
 ;; Parameters for general set.
-project_id = AR
+project_id = RI
 mode = A
 inputfasta = ReHRI_TestData/plastome_mitogenome.fasta
 genome_type =
