--- a/ReHRV_1.0.config.ini
+++ b/ReHRV_1.0.config.ini
@@ -1,6 +1,6 @@
 [general]
 ;; Parameters for general set.
-project_id = VV 
+project_id = RV 
 
 ; project_id: Project number. Consist of letters, numbers and underscores. **Required**. 
 
@@ -22,7 +22,7 @@ genome_type = C
 ;; Parameters for drawing maps of Inverted Repeat (IR) mediated genome recombination.
 auto_map = Y 
 inputfile = ReHRV_TestData/paired_repeats_for_mapping_virtual.tsv
-inputfasta = ReHRV_TestData/OR333986_Trachelospermum_jasminoides.fasta
+inputfasta = ReHRV_TestData/ReHRV_DR_RU5a_RU5b_chr1_1to2.fasta 
 genome_type = C 
 
 ; auto_map: The values are *Yes/Y/No/N/M* (Case insensitive). *Yes/Y*: Automatically draw the map of IR-mediated organelle genome recombination. *M*: Manually select IRs to draw the map of organelle genome recombination. *No/N*: Don't draw the map. **Default=Y**.
@@ -35,7 +35,7 @@ genome_type = C
 ;; Parameters for drawing maps of organelle genome recombination mediated by direct repeat sequence (DR) from one chromosome to two chromosomes (1to2).
 auto_map = y 
 inputfile = ReHRV_TestData/paired_repeats_for_mapping_virtual.tsv
-inputfasta = ReHRV_TestData/OR333986_Trachelospermum_jasminoides.fasta
+inputfasta = ReHRV_TestData/ReHRV_DR_RU5a_RU5b_chr1_1to2.fasta 
 genome_type = C 
 
 ; auto_map: The values are *Yes/Y/No/N/M* (Case insensitive). *Y/Yes*: Automatically draw the map of DR-mediated organelle genome recombination (1to2). *M*: Manually select DRs to draw the map of organelle genome recombination. *No/N*: Don't draw the map. **Default=Y**.
@@ -150,7 +150,7 @@ image_dpi = 600
 ; image dpi: *Default=600dpi**.
 
 ; Remarks info in the circle map.
-center_font = Main
+center_font = Major
 left_middle_font = RU1
 right_middle_font = RU2
 top_middle_font = RU3
