--- a/ReHRI.config.ini
+++ b/ReHRI.config.ini
@@ -49,7 +49,7 @@ flanked_sequence_length = 1000
 
 
 [sequencing_depth]
-;; Parameters for mapping reads to extracted sequences from mainconfiguration and subconfiguration.
+;; Parameters for mapping reads to TRS from mainconfiguration and subconfiguration.
 alignment_software = minimap2
 evalue = 1e-5
 NGS_single_end = 
